<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CodeBag</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">help</string>
    <string name="action_help_msg">1. New a folder in mycode and put a new java file which Extends MyCode in it as method entry.\n
        						   2. add  &lt;meta-data  android:name="appType"  android:value="codebag_appdemo" /> in your demo app manifest.xml\'s application tag</string>
    <string name="action_about">about</string>
    <string name="action_about_msg">This a simple programe for collect your own code.</string>
    <string name="action_feedback">feedback</string>
    <string name="action_search">search</string>
    <string name="action_refresh">refresh</string>
    <string name="action_showlog">show log</string>
    <string name="action_clearlog">clear log</string>
    <string name="action_b_pull">B pull handle</string>
    <string name="action_h_pull">H pull handle</string>
    <string name="action_hb_pull">HB pull handle</string>
    <string name="action_exit">exit</string>
    <string name="app_name_timewidget">timeWidget</string>
    
    <string name="item_string">item</string>
    <string name="item_subfile_count">This folder has %s files</string>
    
    
    <!-- format TEST  参考：http://examples.javacodegeeks.com/core-java/lang/string/java-string-format-example/-->
    <string name="format_test_name">my name is %s</string>
    <string name="format_test_old"> i am %1$d years old</string>
    <string name="format_test_name_place">my name is %1$11s, i am from %2$s</string>
    <string name="format_test_name_place_old">my name is %1$11Vs, i am from %2$s, i am %3$d years old</string>

     <string name="values_marks">values</string>
     <string name="loading">loading&#8230;</string>
</resources>
