<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codebag.bag.MainActivity" >

    <item
        android:id="@+id/action_help"
        android:orderInCategory="1"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="4"
        android:title="@string/action_feedback"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="5"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="6"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_showlog"
        android:orderInCategory="7"
        android:title="@string/action_showlog"/>
    <item
        android:id="@+id/action_clearlog"
        android:orderInCategory="8"
        android:title="@string/action_clearlog"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="9"
        android:title="@string/action_exit"/>

</menu>